--- a/control/blinker_us/Makefile
+++ b/control/blinker_us/Makefile
@@ -1,8 +1,8 @@
 CC=arm-linux-gnueabihf-gcc
 CFLAGS=-Wall -O2
 
-blinker: blinker.c
+writevalue: writevalue.c
 	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
 
 clean:
-	rm -f blinker
+	rm -f writevalue
