add multiple values effortlessly

--- a/control/Makefile
+++ b/control/Makefile
@@ -1,8 +1,8 @@
 CXX=arm-linux-gnueabihf-g++
 RM=rm -f
-CPPFLAGS=-g -Wall
+CPPFLAGS=-O3 -g -Wall -std=c++11
 
-SRCS=main.cpp fpgacontroller.cpp
+SRCS=main.cpp fpgacontroller.cpp channel.cpp
 OBJS=$(subst .cpp,.o,$(SRCS))
 
 
