fully working odesolver, but still a bug with the number representation

--- a/control/Makefile
+++ b/control/Makefile
@@ -1,8 +1,9 @@
 CXX=arm-linux-gnueabihf-g++
+#CXX=g++
 RM=rm -f
 CPPFLAGS=-O3 -g -Wall -std=c++11
 
-SRCS=main.cpp fpgacontroller.cpp channel.cpp
+SRCS=main.cpp fpgacontroller.cpp channel.cpp fixedpointconverter.cpp
 OBJS=$(subst .cpp,.o,$(SRCS))
 
 
