--- a/sockit/sockit.qsf
+++ b/sockit/sockit.qsf
@@ -244,20 +244,24 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_
 
 
 
+
+
+
+
 set_global_assignment -name VHDL_FILE hdl/compute_main.vhdl
 set_global_assignment -name VHDL_FILE hdl/io_led.vhd
 set_global_assignment -name VHDL_FILE hdl/sockit.vhd
 set_global_assignment -name VHDL_FILE hdl/Solver_Component_10.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_Component_16.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_eulerScheme_3.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_forwardLEDS_2.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_matrix2d_11.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_euler_3.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_matrix3d_11.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_mealyzm_1.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_13.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_7.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_satMult_12.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_satMult_6.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_satPlus_4.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_solveODE_2.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_specF_5.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_testbench.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_topEntity_0.vhdl
