--- a/control/Makefile
+++ b/control/Makefile
@@ -1,18 +1,14 @@
-CXX=arm-linux-gnueabihf-g++
-#CXX=g++
+#CXX=arm-linux-gnueabihf-g++
+CXX=g++
 RM=rm -f
 CPPFLAGS=-O3 -g -Wall -std=c++11
 
-SRCS=main.cpp fpgacontroller.cpp channel.cpp fixedpointconverter.cpp
+SRCS=speedtest.cpp
 OBJS=$(subst .cpp,.o,$(SRCS))
 
-
-test: speedtest
-	$(CXX) $(CPPFLAGS) speedtest.cpp -o speedtest
-
 all: $(OBJS)
-	$(CXX) $(LDFLAGS) -o fpgacontroller $(OBJS)
+	$(CXX) $(LDFLAGS) -o speedtest $(OBJS)
 
 clean:
-	rm -rf $(OBJS) fpgacontroller speedtest
+	rm -rf $(OBJS) speedtest
 
