--- a/minified/sockit/sockit.qsf
+++ b/minified/sockit/sockit.qsf
@@ -42,7 +42,7 @@
 # ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 14.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "02:09:39  MAY 14, 2015"
-set_global_assignment -name LAST_QUARTUS_VERSION 14.1.0
+set_global_assignment -name LAST_QUARTUS_VERSION 15.0.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 
 set_global_assignment -name FAMILY "Cyclone V"
@@ -262,26 +262,21 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_
 
 
 
-set_global_assignment -name VHDL_FILE hdl/Solver_Component_15.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_a_17.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_matrix4d_10.vhdl
+
+
+set_global_assignment -name VHDL_FILE hdl/Solver_euler_3.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_matrix4d_4.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_mealyzm_1.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_12.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_5.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_rk4_3.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_11.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_16.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_4.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satPlus_9.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_10.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_6.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satMult_5.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satMult_9.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satPlus_7.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_solveODE_2.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_specF_8.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_testbench.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_topEntity_0.vhdl
 set_global_assignment -name VHDL_FILE hdl/Solver_types.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_z31U_8.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR1_6.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR_13.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfFractionalFixed_zdcfromRational21_7.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfOrdSigned3_14.vhdl
 set_global_assignment -name VHDL_FILE hdl/compute_main.vhdl
 set_global_assignment -name VHDL_FILE hdl/io_led.vhd
 set_global_assignment -name VHDL_FILE hdl/sockit.vhd
