--- a/sockit/sockit.qsf
+++ b/sockit/sockit.qsf
@@ -240,7 +240,6 @@ set_global_assignment -name SDC_FILE sockit.sdc
 set_global_assignment -name QIP_FILE memory_io/synthesis/memory_io.qip
 
 
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 
 
 
@@ -258,27 +257,29 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_
 
 
 
+
+set_global_assignment -name VHDL_FILE hdl/Solver_Component_9.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_euler_3.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_matrix4d_4.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_mealyzm_1.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_13.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_6.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satMult_12.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satMult_5.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_satPlus_10.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_solveODE_2.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_specF_11.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_testbench.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_topEntity_0.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_types.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_z31U_16.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR1_14.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR_7.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_zdfFractionalFixed_zdcfromRational21_15.vhdl
+set_global_assignment -name VHDL_FILE hdl/Solver_zdfOrdSigned3_8.vhdl
 set_global_assignment -name VHDL_FILE hdl/compute_main.vhdl
 set_global_assignment -name VHDL_FILE hdl/io_led.vhd
 set_global_assignment -name VHDL_FILE hdl/sockit.vhd
 set_global_assignment -name VHDL_FILE hdl/sockit_pll.vhd
-set_global_assignment -name VHDL_FILE hdl/Solver_a_17.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_Component_15.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_matrix4d_10.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_mealyzm_1.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_12.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_resizeFzm_5.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_rk4_3.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_11.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_16.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satMult_4.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_satPlus_9.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_solveODE_2.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_testbench.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_topEntity_0.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_types.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_z31U_8.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR_13.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfBitsSigned_zdcshiftR1_6.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfFractionalFixed_zdcfromRational21_7.vhdl
-set_global_assignment -name VHDL_FILE hdl/Solver_zdfOrdSigned3_14.vhdl
+
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
